# GESTIONE-RIPOSO

./: .gitignore  .ninja_deps  .ninja_log  .qmlls.ini  CMakeCache.txt  CMakeCache.txt.prev  CMakeLists.txt  Main.qml  Makefile  appGestione_Riposo.html  appGestione_Riposo.js  appgestione_riposo_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  databasemanager.h  index.html  main.cpp  pdf.js
.qt/: .qmlls.build.ini  .qmlls.build.ini.part  QtDeploySupport.cmake  QtDeployTargets.cmake  appGestione_Riposo_qml.cmake  appGestione_Riposo_res.cmake
.qt/qml_imports/: appGestione_Riposo_conf.rsp
.qt/rcc/: appGestione_Riposo_raw_qml_0.qrc  qmake_Gestione_Riposo.qrc  qrc_appGestione_Riposo_raw_qml_0.cpp  qrc_qmake_Gestione_Riposo.cpp
.qtcreator/: CMakeLists.txt.user.114aa80
.rcc/qmlcache/: all_aotstats.aotstatslist  appGestione_Riposo_Main_qml.cpp  appGestione_Riposo_Main_qml.cpp.aotstats  appGestione_Riposo_qml_loader_file_list.rsp  appGestione_Riposo_qmlcache_loader.cpp  module_appGestione_Riposo.aotstatslist
.rcc/qmllint/: appGestione_Riposo.rsp  appGestione_Riposo_json.rsp  appGestione_Riposo_module.rsp
Gestione_Riposo/: Main.qml  appGestione_Riposo_qml_module_dir_map.qrc
appGestione_Riposo_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
appGestione_Riposo_autogen/EWIEGA46WW/: moc_databasemanager.cpp  moc_databasemanager.cpp.d  moc_databasemanager.cpp.json
build-wasm/Gestione_Riposo/: appGestione_Riposo_qml_module_dir_map.qrc  qmldir
docs/: appGestione_Riposo.js
meta_types/: appGestione_Riposo_json_file_list.txt  appGestione_Riposo_json_file_list.txt.timestamp  qt6appgestione_riposo_metatypes.json
(+1 files in other folders)
